[package]
name = "tempus"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio        = { version = "1.0", features = ["full"] }     # async runtime for DB & I/O
clap         = { version = "4.0", features = ["derive"] }   # CLI parsing (for commands & flags)
serde        = { version = "1.0", features = ["derive"] }   # (De)serialization framework
serde_json   = "1.0"                                         # JSON support (or use ron/toml)
sqlx         = { version = "0.7", features = ["sqlite", "chrono", "macros", "runtime-tokio"] }  
chrono       = { version = "0.4", features = ["serde"] }    # date/time types
ratatui      = "0.20"                                        # TUI rendering library
crossterm    = "0.27"                                        # cross-platform terminal I/O
anyhow       = "1.0"
linfa        = "0.7"
linfa-linear = "0.7" 
linfa-preprocessing = "0.7"
linfa-logistic = "0.7"
bincode = "2.0"
ndarray = "0.15"
